tests/sksl/errors/Ossfuzz26759.sksl
void main() { int i; i-- - 0*int3(i); }
